Mudanças no texto

--- a/Texto/Version2/Livro.tex
+++ b/Texto/Version2/Livro.tex
@@ -58,6 +58,8 @@
 \usepackage[utf8]{inputenc} % Required for including letters with accents
 \usepackage[T1]{fontenc} % Use 8-bit encoding that has 256 glyphs
 
+%\usepackage[abnt-etal-cite=3,abnt-etal-list=0,bibjustif]{abntcite}
+
 \usepackage{url}
 \usepackage{listings}
 \usepackage{chngcntr}
@@ -251,7 +253,7 @@ dessa                               licença,                              visit
 %-------------------------------------------------------------------------------
 
 %\chapter*{Bibliography}
-\bibliographystyle{abnt-num}
+\bibliographystyle{plain}
 \bibliography{bib/EngWeb}
 
 %-------------------------------------------------------------------------------
