--- a/Texto/Version2/bib/EngWeb.bib
+++ b/Texto/Version2/bib/EngWeb.bib
@@ -1,5 +1,5 @@
 @book{wei15,
-	address = "S{\~a}o Paulo",
+	address = "S{\~a}o Paulo: Brasil",
 	author = "WEISSMANN, H.L.",
 	publisher = "Casa do C{\'o}digo",
 	title = "{Falando de Grails -- Altíssima produtividade no desenvolvimento web}",
@@ -7,7 +7,7 @@
 }
 
 @book{Beck12,
-	address = "Boston",
+	address = "Boston: EUA",
 	author = "BECK, K.",
 	publisher = "Addison-Wesley",
 	title = "Test Driven Development: By Example",
@@ -15,7 +15,7 @@
 }
 
 @book{Joha12,
-	address = "Boston",
+	address = "Boston: EUA",
 	author = "JOHANSEN, C.",
 	publisher = "Addison-Wesley",
 	title = "Test-Driven JavaScript Development",
@@ -23,8 +23,8 @@
 }
 
 @book{Bed12,
-	address = "S{\~a}o Carlos",
-	author = "BEDER, Delano Medeiros",
+	address = "S{\~a}o Carlos: Brasil",
+	author = "BEDER, D. M.",
 	isbn = "978-85-7600-290-1",
 	publisher = "EdUFSCar",
 	series = "{Cole\c{c}{\~a}o UAB - UFSCar}",
@@ -33,7 +33,7 @@
 }
 
 @book{Pressman11,
-	address = "S{\~a}o Paulo",
+	address = "S{\~a}o Paulo: Brasil",
 	author = "PRESSMAN, R.S.",
 	edition = "7a",
 	publisher = "Bookman",
@@ -42,7 +42,7 @@
 }
 
 @book{Pressman09,
-	address = "Rio de Janeiro",
+	address = "Rio de Janeiro: Brasil",
 	author = "PRESSMAN, R.S. and LOWE, D.",
 	publisher = "LTC",
 	title = "{Engenharia Web}",
@@ -50,7 +50,7 @@
 }
 
 @book{BA04,
-	address = "Boston",
+	address = "Boston: EUA",
 	author = "BECK, K. and ANDRES, C.",
 	publisher = "Addison-Wesley",
 	title = "{Extreme Programming Explained: Embrace Change}",
@@ -59,13 +59,20 @@
 }
 
 @book{Schwaber04,
-	address = "Washington",
+	address = "Washington: EUA",
 	author = "SCHWABER, K.",
 	publisher = "Microsoft Press",
 	title = "{Agile Project Management with SCRUM}",
 	year = "2004",
 }
 
+@book{BR13,
+	author="BROWN, J.S. and ROCHER, G.",
+        title="The Definitive Guide to Grails 2",
+	address="New York: EUA",
+	publisher="Apress",
+	year="2013",
+}
 
 @article{KP88,
 	author = "KRASNER, G. and POPE, S.",
@@ -94,12 +101,20 @@
         pages = {91--105} 
 }
 
+@book{VJN+13,
+  title={Beginning Groovy, Grails and Griffon},
+  author={VISHAL, L. and JUDD, C.M and NUSAIRAT, J.F. and SHINGLER, J.},
+  year={2013},
+  publisher = {Apress},
+  address = {New York: USA},
+}
+
 @book{Grails,
   title={Grails in Action},
   author={SMITH, G. and LEDBROOK, P.},
   year={2009},
   publisher = {Manning Publications Co.},
-  address = {Greenwich, CT, USA},
+  address = {Greenwich: USA},
 }
 
 @book{Groovy,
@@ -107,5 +122,5 @@
  title = {Groovy in Action},
  year = {2007},
  publisher = {Manning Publications Co.},
- address = {Greenwich, CT, USA},
+ address = {Greenwich: USA},
 } 
