--- a/Texto/Version2/tex/conclusoes.tex
+++ b/Texto/Version2/tex/conclusoes.tex
@@ -457,6 +457,11 @@ void "testando a ação redirect - papel ROLE_CLIENTE"() {
 \end{footnotesize}
 \end{mdframed}
 
+%\nocite{BR13}
+%\nocite{Grails}
+%\nocite{Groovy}
+%\nocite{VJN+13}
+
 \section{Estudos complementares}
 
 \vspace{0.5cm}
