Atualização do projeto LivrosREST Referências bibliográficas

--- a/Texto/Version2/Livro.tex
+++ b/Texto/Version2/Livro.tex
@@ -253,6 +253,7 @@ dessa                               licença,                              visit
 %-------------------------------------------------------------------------------
 
 %\chapter*{Bibliography}
+%\bibliographystyle{abnt-num}
 \bibliographystyle{plain}
 \bibliography{bib/EngWeb}
 
