--- a/Texto/Version2/bib/EngWeb.bib
+++ b/Texto/Version2/bib/EngWeb.bib
@@ -78,7 +78,7 @@
 	author = "KRASNER, G. and POPE, S.",
 	number = "3",
 	pages = "26--49",
-	publisher = "Journal of Object-Oriented Programming",
+	journal = "Journal of Object-Oriented Programming",
 	title = "{A Cookbook for Using the Model-View Controller User Interface Paradigm in Smalltalk-80}",
 	volume = "1",
 	year = "1988"
@@ -86,14 +86,14 @@
 
 @article{North06,
 	author = "NORTH, D.",
-	publisher = "Better Software Magazine",
+	journal = "Better Software Magazine",
 	title = "{Introducing Behaviour-Driven Development}",
 	year = "2006"
 }
 
 @article{LMP10,
 	author = "LAZAR, I. and MOTOGNA, S. and PÂRV, B.",
-	publisher = "Eletronic Notes in Theoretical Computer Science",
+	journal = "Eletronic Notes in Theoretical Computer Science",
 	title = "{Behavior Driven Development of Foundational UML Components}",
 	year = "2010",
         volume = {264},
@@ -105,6 +105,14 @@
   title={Beginning Groovy, Grails and Griffon},
   author={VISHAL, L. and JUDD, C.M and NUSAIRAT, J.F. and SHINGLER, J.},
   year={2013},
+  publisher = {Apress},
+  address = {New York: USA},
+}
+
+@book{JNS08,
+  title={Groovy and Grails -- From Novice to Professional},
+  author={JUDD, C.M. and NUSAIRAT, J.F. and SHINGLER, J.},
+  year={2008},
   publisher = {Apress},
   address = {New York: USA},
 }
